Fixing webkit issues on mobile, updating copy.

--- a/assets/sass/modules/_globals.scss
+++ b/assets/sass/modules/_globals.scss
@@ -38,8 +38,8 @@ img {
 }
 
 input, textarea {
-  -webkit-appearance: none;
-  -webkit-border-radius: 0;
+  -webkit-appearance: none!important;
+  -webkit-border-radius: 0!important;
 }
 
 .button-align {
